# dump

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: DumpConfig.cmake.in  cpp.cmake
dump/: CMakeLists.txt
dump/include/dump/: dump.hpp
dump/tests/: dump_test.cpp
